# Polar_dipole_SO_PHI

./: .gitignore  README.md  baseline_config.py  paper.tex  paper_revised.tex  paper_rewritten_uk.tex  pyproject.toml  references.bib  sola_example_6.tex  template.tex
data/: calibration_resolution_test.csv  calibration_stats_cr2264.csv  reference_dipole_by_rotation.csv
data/campaign/cr_2294/milestone/: calibration_stats.csv  milestone_dipole_comparison.csv
data/campaign/cr_2295/milestone/: calibration_stats.csv  milestone_dipole_comparison.csv
data/sft_polar_cr2295/: sft_polar_reversals.csv
data/sft_polar_cr2296/: b_init_hmi.npy  b_init_phi.npy  b_init_phi_constrained.npy  sft_latitude.npy  sft_polar_comparison.csv  sft_polar_reversals.csv
data/sft_polar_cr2297/: sft_polar_reversals.csv
docs/: REPRODUCE.md  RESEARCH_PLAN.md  manuscript.md  paper_outline.md  results_brief.html
scripts/: alpha_sensitivity_sweep.py  calibration_resolution_test.py  compare_reference_by_rotation.py  compare_reference_dipole.py  download_baseline_data.py  make_campaign_figure.py  make_resolution_figure.py  plot_baseline_summary.py  plot_calibration_drift.py  plot_campaign_summary.py  plot_sft_polar.py  run_baseline_pipeline.py  run_milestone_by_rotation.py  run_milestone_comparison.py  run_sft_from_maps.py  run_sft_polar_experiment.py  run_synoptic_assimilation.py
sft/: README.md  original_transp.py
solar_pipeline/: blending.py  calibration.py  carrington.py  dipole.py  geometry.py  io_utils.py  pipeline.py  plotting.py  radial.py  sft.py
tests/: test_crota2.py  test_header_patch.py  test_io_metadata.py  test_milestone.py  test_resolution.py  test_sft.py
(+8 files in other folders)
