[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-pipeline"
version = "1.0.0"
description = "Baseline workflow for comparing and combining Solar Orbiter/PHI-FDT and SDO/HMI line-of-sight magnetograms and estimating an approximate Carrington-style axial dipole proxy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sunpy[map]>=6.0",
    "reproject>=0.13",
    "astropy>=6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
]

[project.optional-dependencies]
download = [
    "sunpy-soar>=1.8",  # only used when sunpy < 8 (sunpy >= 8 ships a SOAR client)
    "drms>=0.7",
    "requests>=2.28",
]
dev = [
    "pytest>=7",
]

[project.scripts]
run-baseline-pipeline = "scripts.run_baseline_pipeline:main"
plot-baseline-summary = "scripts.plot_baseline_summary:main"
download-baseline-data = "scripts.download_baseline_data:main"
run-milestone-comparison = "scripts.run_milestone_comparison:main"
run-milestone-by-rotation = "scripts.run_milestone_by_rotation:main"
plot-campaign-summary = "scripts.plot_campaign_summary:main"
compare-reference-by-rotation = "scripts.compare_reference_by_rotation:main"
run-sft-from-maps = "scripts.run_sft_from_maps:main"
run-sft-polar-experiment = "scripts.run_sft_polar_experiment:main"
plot-sft-polar = "scripts.plot_sft_polar:main"
calibration-resolution-test = "scripts.calibration_resolution_test:main"

[tool.setuptools]
py-modules = ["baseline_config"]

[tool.setuptools.packages.find]
include = ["solar_pipeline*", "scripts*"]
